Prevent logo wrapping on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -105,3 +105,6 @@
     display: block;
   }
 }
+.logo {
+  white-space: nowrap;
+}
